- Fix availableHeight + vertical alignment
- Fix save variable.
- Fix recalc page number + sticky object
- Fix draw gradient + rectangle object
- Fix presentation mode : Don't draw grid and helpline in this mode
- Fix update ruler tabs when we switch between two text object
- Fix move up/down style
- Fix restore style shortcut when we remove/rename/add style

Changes after KPresenter 1.2
============================
- Use ForbiddenCursor when object is "protect size"
- Spell checker can spellcheck only selection
- Now Shadow is a text properties
- Add "copy link" feature.
- Add "add to bookmark" feature
- We can change "picture path"
- Add "remove link"
- Add font properties : change relative font size when we sub/super script font
- Add support to add offset from baseline
- Now koinsertlink use 'recent document'
- Now "create backup file" is configurable
- Add support to insert cursor directly
- Add support to "word by word" underline/strikeout attribute
- Add new variable : Next page number, previous page number
- Add time/date variable offset
- Fix #24242 add variable : created/modified/printed document date
- Now we can copy text of comment.
- Add support for font attribute ( Uppercase/lowercase )
- Add autocorrection : "Capitalize name of days"
- Add new font attribute : small caps
- Now we can modify "ignore list"
- Now we can modify personal dictonary
- Now we can change backup path
- Now kotextformat support language
- Use kocommandhistory
- Add support for global language
- Add new lineSpacing type :"At least"/"exactly"/"Multiple"
- Use new kospell API
- Allow to copy/paste image/embedded object from different kpresenter app, thanks to David to implement koStoreDrag
- Now right button gives spell check result
- Transition effect dialog (with preview)
- Better loading of background pictures (especially for remote files.)
- Web presentation: better HTML generation, usability improvement of the wizard